# RobotCore

./: .gitignore  LICENSE  MILESTONES.md  README.md  ROADMAP.md  RobotCore.sln
.devcontainer/: Dockerfile  devcontainer.json
RobotCore.Library/: RobotCore.Library.csproj
RobotCore.Library/Attributes/: RobotKeywordAttribute.cs  RobotLibraryAttribute.cs
RobotCore.Library/Core/: IKeywordManager.cs  Keyword.cs  KeywordManager.cs  KeywordMetadata.cs  KeywordResult.cs  (+1 more)
RobotCore.Service/: Program.cs  RobotCore.Service.csproj  Startup.cs
RobotCore.StandaloneServer/: ExampleLibrary.cs  GenericLoggerNameLayoutRenderer.cs  Program.cs  RobotCore.StandaloneServer.csproj  RobotLogger.cs  UnixEpochLayoutRenderer.cs
RobotCore.XmlRpcService/: HttpService.cs  IRemoteClient.cs  IRobotFrameworkRemoteAPI.cs  IXmlRpcRequestHandler.cs  RobotCore.XmlRpcService.csproj  RobotRemoteLibrary.cs  XmlRpcBuilder.cs
test/robotframework/: pyproject.toml
test/robotframework/acceptance/: ProxyableRemote.py  acceptance.resource  argument_counts.robot  argument_types.robot  basic_communication.robot  failures.robot  finding_keywords.robot  invalid_arguments_counts.robot  kwargs.robot  logging.robot  return_values.robot  traceback.robot  variables.py
test/robotframework/robocon-demo/: __init__.robot  demo.robot  remote-library.resource
test/robotframework/standalone/: __init__.robot
test/robotframework/tests-library/: ComplexTypeConverter.py  MockLibrary.py  arguments.robot  dynamic-type-conversion.robot  remote-library.resource  static-type-conversion.robot  xml-rpc-client.py
(+37 files in other folders)
